# async-tensorrt

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: ci.yaml
src/: builder.rs  engine.rs  error.rs  lib.rs  optimization_profile.rs  runtime.rs
src/ffi/: builder_config.rs  memory.rs  mod.rs  network.rs  optimization_profile.rs  parser.rs  version.rs
src/ffi/pre/: helpers.rs  includes.rs  shims.rs
src/ffi/sync/: builder.rs  engine.rs  mod.rs  optimization_profile.rs  runtime.rs
src/tests/: memory.rs  utils.rs
tests/: functions_side_effects_test.rs
