[package]
name = "async-tensorrt"
description = "Async TensorRT for Rust."
keywords = ["async", "nvidia", "cuda", "gpu", "tensorrt"]
readme = "README.md"
categories = ["asynchronous"]
edition = "2021"
version = "0.9.1"
authors = ["Oddity.ai Developers <hello@oddity.ai>"]
repository = "https://github.com/oddity-ai/async-tensorrt"
license = "MIT OR Apache-2.0"

[dependencies]
async-cuda = "0.6.1"
cpp = "0.5"
tracing = "0.1"

[patch.crates-io]
# need to upstream cuda get devices
async-cuda = { git = "https://github.com/micahcc/async-cuda.git", branch = "main"}

[dev-dependencies]
tempfile = "3.4"
tokio = { version = "1", default-features = false, features = [
  "macros",
  "test-util",
  "time",
] }

[build-dependencies]
cpp_build = "0.5"

[package.metadata.docs.rs]
rustc-args = ["--cfg", "feature=\"docs-only\""]
